исправлена работа некоторых команд в т.ч. exit