@@ -6,8 +6,6 @@ import ui.CommandType;
 import ui.Request;
 import ui.Response;
 
-import java.util.stream.Collectors;
-
 public class FilterByRefundableCommand extends Command {
     private final CollectionManager collectionManager;
 
@@ -32,19 +30,13 @@ public class FilterByRefundableCommand extends Command {
             var filteredTickets = collectionManager.getCollection()
                     .stream()
                     .filter(ticket -> refundableValue.equals(ticket.getRefundable()))
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (filteredTickets.isEmpty()) {
                 return Response.warning("Нет элементов, у которых поле refundable равно " + refundableValue);
-            } else {
-                StringBuilder stringBuilder = new StringBuilder();
-                stringBuilder.append("Элементы, у которых поле refundable равно ")
-                        .append(refundableValue)
-                        .append(":\n");
-
-                filteredTickets.forEach(ticket -> stringBuilder.append(ticket).append("\n"));
-                return Response.success(stringBuilder.toString(), null);
             }
+            
+            return Response.success("Элементы, у которых поле refundable равно ", filteredTickets);
         } catch (Exception e) {
             return Response.error("Ошибка: значение refundable должно быть true или false.", null);
         }
